--- a/frontend/src/assets/css/auth/login-form.css
+++ b/frontend/src/assets/css/auth/login-form.css
@@ -1,6 +1,7 @@
 .login-container {
   display: flex;
   justify-content: center;
+  flex-basis: 100%;
   align-items: center;
   min-height: 100vh;
   padding: 20px;
